--- a/package.json
+++ b/package.json
@@ -10,19 +10,30 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.58",
+    "@clerk/nextjs": "^5.4.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@vis.gl/react-google-maps": "^1.1.2",
     "ai": "^3.3.28",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.5.4",
+    "geist": "^1.3.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.439.0",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-leaflet": "^4.2.1",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
