--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ GROQ_API_KEY="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"
 GOOGLE_API_KEY="AIzaSyD5GUOMMrDY5Ml8JOQ5j7z7p9f8GaGCDBg"
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_aW50ZXJuYWwtZ29ibGluLTQyLmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_qOBpmA19shNacOIrnEnYCNgH0s1BXpeRlfk9l1gBfH
+DATABASE_URL="postgresql://nzaih1999:yKEmqT6Q5XlN@ep-aged-silence-a29znaj1.eu-central-1.aws.neon.tech/main?sslmode=require"
