--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.58",
     "@clerk/nextjs": "^5.4.1",
+    "@hookform/resolvers": "^3.9.0",
+    "@next-safe-action/adapter-react-hook-form": "^1.0.13",
+    "@prisma/client": "^5.19.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -25,8 +28,10 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.439.0",
     "next": "14.2.7",
+    "next-safe-action": "^7.9.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
@@ -42,6 +47,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
+    "prisma": "^5.19.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
