--- a/package.json
+++ b/package.json
@@ -12,23 +12,30 @@
     "@ai-sdk/openai": "^0.0.58",
     "@clerk/nextjs": "^5.4.1",
     "@hookform/resolvers": "^3.9.0",
+    "@neondatabase/serverless": "^0.9.5",
     "@next-safe-action/adapter-react-hook-form": "^1.0.13",
+    "@prisma/adapter-neon": "^5.19.1",
+    "@prisma/adapter-pg": "^5.19.1",
     "@prisma/client": "^5.19.1",
+    "@prisma/extension-accelerate": "^1.1.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/pg": "^8.11.10",
     "@vis.gl/react-google-maps": "^1.1.2",
     "ai": "^3.3.28",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.5.4",
     "geist": "^1.3.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.439.0",
     "next": "14.2.7",
     "next-safe-action": "^7.9.2",
+    "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
@@ -37,6 +44,7 @@
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "ws": "^8.18.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -44,6 +52,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ws": "^8.5.12",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
